Bug 34173 - [4.3 regression] FAIL: gnat.dg/release_unc_maxalign.adb execution test
Summary: [4.3 regression] FAIL: gnat.dg/release_unc_maxalign.adb execution test
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: ada (show other bugs)
Version: 4.3.0
: P5 normal
Target Milestone: 4.3.0
Assignee: hainque@adacore.com
URL:
Keywords: wrong-code
Depends on:
Blocks:
 
Reported: 2007-11-21 12:23 UTC by andreasmeier80
Modified: 2007-12-07 11:09 UTC (History)
3 users (show)

See Also:
Host: i686-pc-linux.gnu
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2007-11-25 08:41:30


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreasmeier80 2007-11-21 12:23:32 UTC
gnat.dg/release_unc_maxalign.adb execution test fails for me since 20.11.2007. At 19.11.2007 it whas worked.

Compiler version: 4.3.0 20071120 (experimental) (GCC) 
Platform: i686-pc-linux-gnu
configure flags: --enable-languages=ada,c,c++,fortran,java,objc,obj-c++,treelang --with-mpfr=/usr/local

It fails with r130312 and works with r130286

/home/xxxxx/gcc/gcc/testsuite/gnat.dg/dg.exp ...
*** glibc detected *** ./release_unc_maxalign.exe: munmap_chunk(): invalid pointer: 0x08061010 ***
======= Backtrace: =========
/lib/libc.so.6[0xb7e8d911]
./release_unc_maxalign.exe[0x804aff8]
./release_unc_maxalign.exe[0x804e625]
./release_unc_maxalign.exe[0x8049515]
/lib/libc.so.6(__libc_start_main+0xdc)[0xb7e3f87c]
./release_unc_maxalign.exe[0x8049351]
======= Memory map: ========
08048000-0805b000 r-xp 00000000 08:07 2885527    /data/usr_local/xxxxx/gccobj/gcc/testsuite/gnat/release_unc_maxalign.exe
0805b000-0805c000 rw-p 00012000 08:07 2885527    /data/usr_local/xxxxx/gccobj/gcc/testsuite/gnat/release_unc_maxalign.exe
0805c000-08082000 rw-p 0805c000 00:00 0          [heap]
b7e29000-b7e2a000 rw-p b7e29000 00:00 0
b7e2a000-b7f43000 r-xp 00000000 08:06 31145      /lib/libc-2.4.so
b7f43000-b7f45000 r--p 00118000 08:06 31145      /lib/libc-2.4.so
b7f45000-b7f47000 rw-p 0011a000 08:06 31145      /lib/libc-2.4.so
b7f47000-b7f4a000 rw-p b7f47000 00:00 0
b7f65000-b7f71000 r-xp 00000000 08:07 2843714    /data/usr_local/xxxxx/gccobj/gcc/libgcc_s.so.1
b7f71000-b7f72000 rw-p 0000b000 08:07 2843714    /data/usr_local/xxxxx/gccobj/gcc/libgcc_s.so.1
b7f72000-b7f73000 rw-p b7f72000 00:00 0
b7f73000-b7f8d000 r-xp 00000000 08:06 31138      /lib/ld-2.4.so
b7f8d000-b7f8f000 rw-p 00019000 08:06 31138      /lib/ld-2.4.so
bfb2f000-bfb47000 rw-p bfb2f000 00:00 0          [stack]
ffffe000-fffff000 ---p 00000000 00:00 0          [vdso]
FAIL: gnat.dg/release_unc_maxalign.adb execution test
Comment 1 hainque@adacore.com 2007-11-23 17:11:52 UTC
Subject: Re:   New: [4.3 regression] FAIL: gnat.dg/release_unc_maxalign.adb execution test

andreasmeier80 at gmx dot de wrote:
> gnat.dg/release_unc_maxalign.adb execution test fails for me since
> 20.11.2007.  At 19.11.2007 it whas worked.

 Thanks for opening the PR. We have identified what is causing this
 and are qualifying a candidate fix. This is an old bug actually, showing
 up on this recently added testcase exercising the fix for another issue.

 Cheers,

 Olivier
Comment 2 Eric Botcazou 2007-11-25 08:41:30 UTC
By Olivier.
Comment 3 hainque@adacore.com 2007-11-25 08:43:59 UTC
Subject: Re:  [4.3 regression] FAIL: gnat.dg/release_unc_maxalign.adb execution test

> ebotcazou at gcc dot gnu dot org changed:
> 
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>          AssignedTo|unassigned at gcc dot gnu   |hainque at adacore dot com

 Thanks. I tried to do that yesterday and was refused the privilege.


Comment 4 Eric Botcazou 2007-11-25 08:51:43 UTC
>  Thanks. I tried to do that yesterday and was refused the privilege.

I guess you need to ask Daniel what's going on exactly here.
Comment 5 pinskia@gmail.com 2007-11-25 11:54:08 UTC
Subject: Re:  [4.3 regression] FAIL: gnat.dg/release_unc_maxalign.adb execution test

On 25 Nov 2007 08:51:45 -0000, ebotcazou at gcc dot gnu dot org
<gcc-bugzilla@gcc.gnu.org> wrote:
> I guess you need to ask Daniel what's going on exactly here.

Have you tried your @gcc.gnu.org account?

Thanks,
Andrew Pinski
Comment 6 hainque@adacore.com 2007-11-26 12:02:40 UTC
Subject: Re:  [4.3 regression] FAIL: gnat.dg/release_unc_maxalign.adb execution test

pinskia at gmail dot com wrote:
> Have you tried your @gcc.gnu.org account?

 Humm, no. I tried the login/password combination sent to me more
 than two years ago :)

 I'm obviously not very used to doing these operations and will give
 my @gcc.gnu.org a try. Thanks.


Comment 7 Mark Mitchell 2007-11-27 22:09:25 UTC
P5 until/unless a non-Ada testcase is found.
Comment 8 Olivier Hainque 2007-12-07 10:50:35 UTC
Subject: Bug 34173

Author: hainque
Date: Fri Dec  7 10:50:23 2007
New Revision: 130673

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=130673
Log:
2007-12-07  Olivier Hainque  <hainque@adacore.com>

	PR ada/34173
	* decl.c (gnat_to_gnu_entity) <case E_Array_Type>: When setting
	the alignment on the GCC XUA array type, set TYPE_USER_ALIGN if
	this is from an alignment clause on the GNAT entity.
	* utils.c (create_field_decl): Rewrite the computation of DECL_ALIGN
	to distinguish the case where we set it from the type's alignment.
	When so, propagate TYPE_USER_ALIGN into DECL_USER_ALIGN to indicate
	whether this alignment was set from an explicit alignment clause.


Added:
    trunk/gcc/testsuite/gnat.dg/unc_memfree.adb
    trunk/gcc/testsuite/gnat.dg/unc_memops.adb
    trunk/gcc/testsuite/gnat.dg/unc_memops.ads
Modified:
    trunk/gcc/ada/ChangeLog
    trunk/gcc/ada/decl.c
    trunk/gcc/ada/utils.c
    trunk/gcc/testsuite/ChangeLog

Comment 9 hainque@adacore.com 2007-12-07 11:08:30 UTC
Subject: Re:   New: [4.3 regression] FAIL: gnat.dg/release_unc_maxalign.adb execution test

Hello,

andreasmeier80 at gmx dot de wrote:
> gnat.dg/release_unc_maxalign.adb execution test fails for me since
> 20.11.2007.  At 19.11.2007 it whas worked.

 This should be fixed now. Analysis at 

  http://gcc.gnu.org/ml/gcc-patches/2007-12/msg00318.html

 Thanks again for opening the PR.

 Olivier
Comment 10 Olivier Hainque 2007-12-07 11:09:55 UTC
fixed on mainline.